--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -13,13 +13,13 @@ a:hover {
   text-decoration: none;
 }
 
-.jumbotron {
-  margin-top: -1em;
-  background: url('/images/chess.jpg') no-repeat left center;
-  min-height: 30em;
-  color: #fff;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-}
+// .jumbotron {
+//   margin-top: -1em;
+//   background: url('/images/chess.jpg') no-repeat left center;
+//   min-height: 30em;
+//   color: #fff;
+//   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+// }
 
 .form-actions {
   padding: 19px 20px 20px;
