--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,6 +1,17 @@
-.footer
-  .container 
-    |Competition Collection 
+.card.text-center(style='background-color:#A4A4A4')
+  //- .card-header
+    .care.text-white
+  .card-body
+    // <h5 class="card-title"></h5>
+    .care.text-white
+      h2 Competition Collection 
+    p.card-text
+    .care.text-white
+      | Tel.02-xxxx-xxxx
+      br
+      |CEO yuri Lee
+      br
+      |&copy;
     br
-    |CEO yuri Lee
-    |&copy; 
+    
+
