--- a/views/index.pug
+++ b/views/index.pug
@@ -1,42 +1,69 @@
 extends layout
 
 block hero-unit
-  .jumbotron
-    .container
+  //- .jumbotron
+  //-   .container
       
 block content
+  |
+  br
   .container
-    .row
-      .col-md-6
         //- h3 환영합니다! 
         //- p 환영합니다! 
         p 
-          #carouselExampleControls.carousel.slide(data-ride='carousel')
-            .carousel-inner
-              .carousel-item.active
-                img.d-block.w-100(src='/images/chess.jpg', alt='First slide')
-              .carousel-item
-                img.d-block.w-100(src='/images/golf.jpg', alt='Second slide')
-              .carousel-item
-                img.d-block.w-100(src='/images/chess.jpg', alt='Third slide')
-            a.carousel-control-prev(href='#carouselExampleControls', role='button', data-slide='prev')
-              span.carousel-control-prev-icon(aria-hidden='true')
-              span.sr-only Previous
-            a.carousel-control-next(href='#carouselExampleControls', role='button', data-slide='next')
-              span.carousel-control-next-icon(aria-hidden='true')
-              span.sr-only Next
-        
-      .col-md-6
-        p
-        h3 소개
-        | 
-        p 환영합니다! Competition Collection 공모전 집합소 CC입니다. 
-        p 본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
-
-
-        h3 주요 기능
-        ul
-          li 공모전 등록/보기/변경/삭제
-          li 답변글 등록/삭제
-          li 사용자 관리/인증
-          li API
+        #carouselExampleFade.carousel.slide.carousel-fade(data-ride='carousel')
+          .carousel-inner
+            .carousel-item.active
+              img.d-block.w-100(src='images/chess.jpg', alt='First slide', height='700')
+              .carousel-caption.d-none.d-md-block
+                h1 Competition Collection
+                p
+                  |  환영합니다! Competition Collection 공모전 집합소 CC입니다. 
+            .carousel-item
+              img.d-block.w-100(src='images/golf.jpg', alt='Second slide', height='700')
+              .carousel-caption.d-none.d-md-block
+                p
+                  |  본 서비스에서는 공모전 관련 정보를 등록하고, 검색 확인할 수 있습니다.  
+            .carousel-item
+              img.d-block.w-100(src='images/chess.jpg', alt='Third slide', height='700')
+              .carousel-caption.d-none.d-md-block
+                p
+                  | 좋은 공모전을 통하여 다같이 성장할 수 있는 기회가 되길 바랍니다. 
+          a.carousel-control-prev(href='#carouselExampleFade', role='button', data-slide='prev')
+            span.carousel-control-prev-icon(aria-hidden='true')
+            span.sr-only Previous
+          a.carousel-control-next(href='#carouselExampleFade', role='button', data-slide='next')
+            span.carousel-control-next-icon(aria-hidden='true')
+            span.sr-only Next
+        br
+        br
+        .card-group
+          .card
+            img.card-img-top(src='images/poster1.png', alt='Card image cap')
+            .card-body
+              h5.card-title Card title
+              p.card-text
+                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+              p.card-text
+                small.text-muted Last updated 3 mins ago
+          .card
+            img.card-img-top(src='images/poster2.jpg', alt='Card image cap')
+            .card-body
+              h5.card-title Card title
+              p.card-text This card has supporting text below as a natural lead-in to additional content.
+              p.card-text
+                small.text-muted Last updated 3 mins ago
+          .card
+            img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
+            .card-body
+              h5.card-title Card title
+              p.card-text
+                | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+              p.card-text
+                small.text-muted Last updated 3 mins ago
+        |
+        br
+        |
+        br
+        |
+        br
