--- a/views/competitions/index.pug
+++ b/views/competitions/index.pug
@@ -9,7 +9,7 @@ block content
       input.form-control.mr-sm-2(type='text', name='term', placeholder='Search', aria-label='Search', value=term)
 
     h1.main-title 
-      | Competitions
+      | 공모전 목록
       if competitions.total > 0
         .small Total #{competitions.total} competition(s)
 
