--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html
     script(src='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js', type='text/javascript')
     link(href='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css', rel='stylesheet', type='text/css')
 
+    //- 원래 기간설정으로 달력활용하려 했으나.. 일단 passㅠ_ㅜ
     //- script(type='text/javascript', src='/bower_components/jquery/jquery.min.js')
     //- script(type='text/javascript', src='/bower_components/moment/min/moment.min.js')
     //- script(type='text/javascript', src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
@@ -27,7 +28,16 @@ html
     //- script(type='text/javascript', src='/path/to/bootstrap/js/collapse.js')
     //- script(type='text/javascript', src='/path/to/bootstrap/dist/bootstrap.min.js')
     //- script(type='text/javascript', src='/path/to/bootstrap-datetimepicker.min.js')
-
+    //- summernote 적용
+    link(href='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css', rel='stylesheet')
+    script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js')
+    script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js')
+    // include summernote css/js
+    link(href='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css', rel='stylesheet')
+    script(src='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js')
+    //- 아니 근데..css겹쳐서 적용되어서 topnav이상해짐..아나
+    //- include summernote-ko-KR
+    script(src='lang/summernote-ko-KR.js')
 
   
   body
