Default Settings 및 UI 변경

--- a/views/competitions/_answer.pug
+++ b/views/competitions/_answer.pug
@@ -8,9 +8,9 @@
         | 
         | Like
    
-        //- i.fa.fa-thumbs-down
-        //- | 
-        //- | UnLike
+        i.fa.fa-thumbs-down
+        | 
+        | UnLike
 
   .card-body
     .content= answer.content
