--- a/views/competitions/index.pug
+++ b/views/competitions/index.pug
@@ -26,34 +26,38 @@ block content
 
     hr
     a.btn.btn-outline-warning(href='/competitions/new') 공모전 등록하기
+    |
+    br
+    |
+    br
 
-    table.table
-      thead
-        tr
-          th(scope='col') #
-          th(scope='col') 공모전명
-          th(scope='col') 주최사
-          th(scope='col') 상태
-          th(scope='col') 조회수
-      tbody
-        tr
-          th(scope='row') 1
-          td Mark
-          td Otto
-          td @mdo
-        tr
-          th(scope='row') 2
-          td Jacob
-          td Thornton
-          td @fat
-        tr
-          th(scope='row') 3
-          td Larry
-          td the Bird
-          td @twitter
-    |
-    br
-    |
-    br
+    //- table.table
+    //-   thead
+    //-     tr
+    //-       th(scope='col') #
+    //-       th(scope='col') 공모전명
+    //-       th(scope='col') 주최사
+    //-       th(scope='col') 상태
+    //-       th(scope='col') 조회수
+    //-   tbody
+    //-     tr
+    //-       th(scope='row') 1
+    //-       td Mark
+    //-       td Otto
+    //-       td @mdo
+    //-     tr
+    //-       th(scope='row') 2
+    //-       td Jacob
+    //-       td Thornton
+    //-       td @fat
+    //-     tr
+    //-       th(scope='row') 3
+    //-       td Larry
+    //-       td the Bird
+    //-       td @twitter
+    //- |
+    //- br
+    //- |
+    //- br
 
 //- a.title(href='/competitions/5be46850c7fa6009e4755570', style='font-color:black') [한이음 공모전 2018] SAI 빅 데이터를 활용한 약속장소 및 주변 힙플레스 추천
