add currentUser edit & delete

--- a/views/competitions/show.pug
+++ b/views/competitions/show.pug
@@ -3,23 +3,55 @@ extends ../layout
 block content
   .container
     h1.main-title= competition.title
-
+    
     .competition.show
       include _competition
+      |
+      br
 
+
+      .ui.labeled.button.right
+        .ui.red.button
+          i.heart.icon
+          |  Like
+        a.ui.basic.red.left.pointing.label
+          | 1,048
+      .ui.labeled.button(tabindex='0')
+        .ui.basic.blue.button
+          i.fork.icon
+          |  Forks
+        a.ui.basic.left.pointing.blue.label
+          | 1,048
+
+    if(currentUser && competition.author.id == currentUser.id)
       .buttons
         button.btn.btn-outline-warning #[i.fa.fa-thumbs-up ] 좋아요
-        | 
+        
         a.btn.btn-outline-secondary(href=`/competitions/${competition.id}/edit`) 편집
         | 
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 삭제
+        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete` onclick='return confirm("정말 삭제하시겠습니까?");') 삭제
         |
         |
-        a.btn.btn-outline-primary(href=`/competitions/${competition.id}/edit`) 페이스북
-        | 
-        a.btn.btn-outline-info.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 트위터
-        | 
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 신고
+        //- a.btn.btn-outline-primary(href=`/competitions/${competition.id}/edit`) 페이스북
+        //- | 
+        //- a.btn.btn-outline-info.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 트위터
+        //- | 
+        //- a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/competitions/${competition.id}?_method=delete`) 신고
+        //- button.ui.facebook.button
+        //-   i.facebook.icon
+        //-   |   Facebook
+        //- button.ui.twitter.button
+        //-   i.twitter.icon
+        //-   |   Twitter
+        //- button.ui.google.plus.button
+        //-   i.google.plus.icon
+        //-   |   Google Plus
+
+
+
+
+
+
     if competition.numAnswers > 0
       hr
       h3 댓글 (#{competition.numAnswers})
