--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -31,7 +31,7 @@
                 |  My Profile
               a.item(href=`/users/${currentUser._id}`)
                 i.globe.icon
-                |  Registered Competition
+                |  Registered Competition 환영해요
               a.item(href=`/users/${currentUser._id}/like`)
                 i.settings.icon
                 |  My Like      
